--- a/football.html
+++ b/football.html
@@ -20,6 +20,7 @@
             <nav class="mt-4">
                 <ul>
                     <li><a href="index.html">Main page</a></li>
+                    <li><a href="colorscheme.html">Colorscheme</a></li>
                 </ul>
             </nav>
             <h1>Football</h1>
@@ -28,6 +29,9 @@
                     <img src="images/pexels-pixabay-47730.jpg" alt="football" width="640" height="426">
                 </div>
             </a>
+            <figure>
+                <figcaption>Adidas Brazuca</figcaption>
+            </figure>
             
         </header>
         
