--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Anmol Rangram</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style2.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap-grid.min.css">
 </head>
@@ -45,8 +45,9 @@
             <figure>
                 <div class="d-none d-md-block col-md-12 col-lg-6 p-3">
                     <img src=images/pexels-anmol-8944748.jpg alt="football ground" width="640" height="480">
-                    <figcaption>Football ground in my hometown</figcaption>
                 </div>
+                <figcaption>Football ground in my hometown</figcaption>
+               
             </figure>
             <h3>Language skills</h3>
             <table>
